informatique section | fix paragraph overlaping on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,7 @@ p {
   }
 
   .wrap p {
-    font-size: 3.6vw;
+    font-size: 3.5vw;
   }
 
 
